Fixing 'java.lang.NoClassDefFoundError: org/apache/karaf/specs/locator/OsgiLocator' for Karaf IT tests (#53)